# capturegem-protocol

./: .gitignore  CLIENT-LIBRARY-IMPLEMENTATION-COMPLETE.md  COLLECTION-MANIFEST-IMPLEMENTATION.md  IMPLEMENTATION-SUMMARY.md  README.md  ROACH-MOTEL-FIXES.md  package-lock.json  package.json
solana-program/: .gitignore  Anchor.toml  Cargo.toml  package-lock.json  package.json  run-tests.sh  txtx.yml
solana-program/client-library/: index.ts  package.json  tsconfig.json
solana-program/client-library/docs/: README.md
solana-program/client-library/examples/: collection-manifest-example.ts  orca-workflow-example.ts  pinner-flow-example.ts  purchaser-flow-example.ts
solana-program/client-library/libs/: AccessClient.ts  CryptoUtils.ts  EscrowClient.ts  ExternalWalletAdapter.ts  IPFSTrustMonitor.ts  IndexerClient.ts  IntegratedWorkflow.ts  IpfsManager.ts  ModerationClient.ts  OrcaClient.ts  PDAUtils.ts  (+4 more)
solana-program/library-source/: CLIENT-LIBRARY-OVERVIEW.md  CLIENT-LIBRARY-SUMMARY.md  QUICK-REFERENCE.md  README.md  index.ts  package-lock.json  package.json
solana-program/migrations/: deploy.js
solana-program/runbooks/: README.md
solana-program/src/: constants.rs  errors.rs  lib.rs  state.rs
solana-program/tests/: README.md  access.test.js  access.test.ts  integration.test.js  integration.test.ts  mint-collection-tokens.test.js  mint-collection-tokens.test.ts  moderation.test.js  moderation.test.ts  orca-integration.test.js  orca-integration.test.ts  performer.test.js  performer.test.ts  pinner.test.js  pinner.test.ts  protocol.test.js  protocol.test.ts  staking.test.js  staking.test.ts  treasury.test.js  treasury.test.ts  user.test.js  user.test.ts  video.test.ts
(+89 files in other folders)
